<package>
  <name>rosserial_embeddedlinux</name>
  <version>0.6.3</version>
  <description>
    Libraries and examples for ROSserial usage on 86Duino on Linux, DOS, Windows Enviroments
  </description>
  <author>DY Hung</author>
  <maintainer email="dyhung@dmp.com.tw">DY Hung</maintainer>
  <maintainer email="ing5698yi@hotmail.com">CJ Wu</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rosserial_client</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rosserial_msgs</run_depend>
</package>
